--- a/index.html
+++ b/index.html
@@ -1,5 +1,13 @@
 <!DOCTYPE html>
 <html>
+
+<head>
+  <link rel="stylesheet" type="text/css" href="looks.css">
+  <!-- Sync Aktiv Grotesk from Typekit -->
+  <script src="https://use.typekit.net/nvx6nso.js"></script>
+  <script>try{Typekit.load({ async: true });}catch(e){}</script>
+</head>
+
 <body>
 <h1>Hello World</h1>
 <p>I'm hosted with GitHub Pages.</p>
