--- a/index.html
+++ b/index.html
@@ -10,7 +10,11 @@
 </head>
 
 <body>
-<h1>Hello World</h1>
-<p>I'm hosted with GitHub Pages.</p>
+  <h1>We depend on each other to overcome our personal
+  constraints. But there are unwritten rules on asking
+  for help. This is a collection of the rules we make
+  for when we think it’s ok to help other people.
+ Start typing to submit yours.</h1>
+  <p>It's ok to help when...</p>
 </body>
 </html>
