--- a/index.html
+++ b/index.html
@@ -16,5 +16,6 @@
   for when we think it’s ok to help other people.
  Start typing to submit yours.</h1>
   <p>It's ok to help when...</p>
+  <p class="side"> CONNECT </p>
 </body>
 </html>
