--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
   constraints. But there are unwritten rules on asking
   for help. This is a collection of the rules we make
   for when we think it’s ok to help other people.
- Start typing to submit yours.</h1>
+  <br>  Start typing to submit yours.</h1>
   <p>It's ok to help when...</p>
   <p class="side"> CONNECT </p>
 </body>
