--- a/index.html
+++ b/index.html
@@ -14,8 +14,9 @@
   constraints. But there are unwritten rules on asking
   for help. This is a collection of the rules we make
   for when we think it’s ok to help other people.
-  <br>  Start typing to submit yours.</h1>
-  <p>It's ok to help when...</p>
+  <br> Start typing to submit yours.</h1>
+  <p> <span class="okwhen"> It's ok to help when..</span>
+  blah blah blah blah blah blahb lah</p>
   <p class="side"> CONNECT </p>
 </body>
 </html>
