--- a/index.html
+++ b/index.html
@@ -1,7 +1,11 @@
 <!DOCTYPE html>
+
 <html>
 
 <head>
+  <!-- Link jQuery -->
+  <script src="myScript.js"></script>
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.0/jquery.min.js"></script>
   <link rel="stylesheet" type="text/css" href="looks.css">
   <!-- Sync Aktiv Grotesk from Typekit -->
   <script src="https://use.typekit.net/nvx6nso.js"></script>
@@ -10,13 +14,36 @@
 </head>
 
 <body>
+  <p class="side"> CONNECT </p>
   <h1>We depend on each other to overcome our personal
   constraints. But there are unwritten rules on asking
   for help. This is a collection of the rules we make
   for when we think it’s ok to help other people.
-  <br> Start typing to submit yours.</h1>
-  <p> <span class="okwhen"> It's ok to help when..</span>
-  blah blah blah blah blah blahb lah</p>
-  <p class="side"> CONNECT </p>
+  <br>Start typing to submit yours.</h1>
+  <div class="answerssection">
+  <p> <span class="answer">helping doesn't hurt</span> </p>
+  <p> <span class="answer">ever</span> </p>
+  <p> <span class="answer">you don't lose yourself in helping. (emotionally or mentally)</span> </p>
+  <p> <span class="answer">ever</span> </p>
+  <p> <span class="answer">ever</span> </p>
+  <p> <span class="answer">ever</span> </p>
+  <p> <span class="answer">ever</span> </p>
+  <p> <span class="answer">ever</span> </p>
+  <p> <span class="answer">ever</span> </p>
+  <p> <span class="answer">ever</span> </p>
+  <p> <span class="answer">ever</span> </p>
+  <p> <span class="answer">ever</span> </p>
+  <p> <span class="answer">ever</span> </p>
+  <p> <span class="answer">ever</span> </p>
+  <p> <span class="answer">ever</span> </p>
+  <p> <span class="answer">ever</span> </p>
+  <p> <span class="answer">ever</span> </p>
+  <p> <span class="answer">ever</span> </p>
+  <p> <span class="answer">ever</span> </p>
+  <p> <span class="answer">ever</span> </p>
+  <p> <span class="answer">ever</span> </p>
+  <p> <span class="answer">ever</span> </p>
+</div>
+
 </body>
 </html>
