--- a/index.html
+++ b/index.html
@@ -1,10 +1,9 @@
 <!DOCTYPE html>
-
 <html>
 
 <head>
   <!-- Link jQuery -->
-  <script src="myScript.js"></script>
+  <script type="text/javascript" src="hlpscrpt.js"></script>
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.0/jquery.min.js"></script>
   <link rel="stylesheet" type="text/css" href="looks.css">
   <!-- Sync Aktiv Grotesk from Typekit -->
@@ -14,13 +13,12 @@
 </head>
 
 <body>
-  <p class="side"> CONNECT </p>
   <h1>We depend on each other to overcome our personal
   constraints. But there are unwritten rules on asking
   for help. This is a collection of the rules we make
   for when we think it’s ok to help other people.
   <br>Start typing to submit yours.</h1>
-  <div class="answerssection">
+    <div class="answerssection">
   <p> <span class="answer">helping doesn't hurt</span> </p>
   <p> <span class="answer">ever</span> </p>
   <p> <span class="answer">you don't lose yourself in helping. (emotionally or mentally)</span> </p>
@@ -44,6 +42,6 @@
   <p> <span class="answer">ever</span> </p>
   <p> <span class="answer">ever</span> </p>
 </div>
-
+  <p class="side"> CONNECT </p>
 </body>
 </html>
