--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
   <!-- Sync Aktiv Grotesk from Typekit -->
   <script src="https://use.typekit.net/nvx6nso.js"></script>
   <script>try{Typekit.load({ async: true });}catch(e){}</script>
+  <script> $( $.parseHTML( "<span class=okwhen> It's ok to help when </span>" ) ).prependTo( ".answer" ); </script>
 
 </head>
 
