--- a/index.html
+++ b/index.html
@@ -9,7 +9,8 @@
   <!-- Sync Aktiv Grotesk from Typekit -->
   <script src="https://use.typekit.net/nvx6nso.js"></script>
   <script>try{Typekit.load({ async: true });}catch(e){}</script>
-  <script> $("<span class="okwhen"> It's ok to help when </span>").prependTo( ".answer" ); </script>
+  <!--<script> $("<span class="okwhen"> It's ok to help when </span>").prependTo( ".answer" ); </script> -->
+  <script>$( ".answer" ).prepend( "<span class="okwhen"> It's ok to help when </span>" );</script>
 
 </head>
 
