is this still connected

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 <body>
   <h1>We depend on each other to overcome our personal
   constraints. But there are unwritten rules on asking
-  for help. This is a collection of the rules we make
+  for help. This is a collection of the rules we make poop
   for when we think it’s ok to help other people.
   <br>Start typing to submit yours.</h1>
     <div class="answerssection">
