--- a/index.html
+++ b/index.html
@@ -16,32 +16,32 @@
 <body>
   <h1>We depend on each other to overcome our personal
   constraints. But there are unwritten rules on asking
-  for help. This is a collection of the rules we make poop
+  for help. This is a collection of the rules we make
   for when we think it’s ok to help other people.
   <br>Start typing to submit yours.</h1>
     <div class="answerssection">
-  <p> <span class="answer">helping doesn't hurt</span> </p>
-  <p> <span class="answer">ever</span> </p>
-  <p> <span class="answer">you don't lose yourself in helping. (emotionally or mentally)</span> </p>
-  <p> <span class="answer">ever</span> </p>
-  <p> <span class="answer">ever</span> </p>
-  <p> <span class="answer">ever</span> </p>
-  <p> <span class="answer">ever</span> </p>
-  <p> <span class="answer">ever</span> </p>
-  <p> <span class="answer">ever</span> </p>
-  <p> <span class="answer">ever</span> </p>
-  <p> <span class="answer">ever</span> </p>
-  <p> <span class="answer">ever</span> </p>
-  <p> <span class="answer">ever</span> </p>
-  <p> <span class="answer">ever</span> </p>
-  <p> <span class="answer">ever</span> </p>
-  <p> <span class="answer">ever</span> </p>
-  <p> <span class="answer">ever</span> </p>
-  <p> <span class="answer">ever</span> </p>
-  <p> <span class="answer">ever</span> </p>
-  <p> <span class="answer">ever</span> </p>
-  <p> <span class="answer">ever</span> </p>
-  <p> <span class="answer">ever</span> </p>
+  <p> <div class="answer">helping doesn't hurt</div> </p>
+  <p> <div class="answer">ever</div> </p>
+  <p> <div class="answer">you don't lose yourself in helping. (emotionally or mentally)</div> </p>
+  <p> <div class="answer">ever</div> </p>
+  <p> <div class="answer">ever</div> </p>
+  <p> <div class="answer">ever</div> </p>
+  <p> <div class="answer">ever</div> </p>
+  <p> <div class="answer">ever</div> </p>
+  <p> <div class="answer">ever</div> </p>
+  <p> <div class="answer">ever</div> </p>
+  <p> <div class="answer">ever</div> </p>
+  <p> <div class="answer">ever</div> </p>
+  <p> <div class="answer">ever</div> </p>
+  <p> <div class="answer">ever</div> </p>
+  <p> <div class="answer">ever</div> </p>
+  <p> <div class="answer">ever</div> </p>
+  <p> <div class="answer">ever</div> </p>
+  <p> <div class="answer">ever</div> </p>
+  <p> <div class="answer">ever</div> </p>
+  <p> <div class="answer">ever</div> </p>
+  <p> <div class="answer">ever</div> </p>
+  <p> <div class="answer">ever</div> </p>
 </div>
   <p class="side"> CONNECT </p>
 </body>
