--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 </head>
 
 <body>
-  <script> $( $.parseHTML( "<span class=okwhen> It's ok to help when </span>" ) ).prependTo( ".answer" ); </script>
+  <!--<script> $( $.parseHTML( "<span class=okwhen> It's ok to help when </span>" ) ).prependTo( ".answer" ); </script> -->
   <h1>We depend on each other to overcome our personal
   constraints. But there are unwritten rules on asking
   for help. This is a collection of the rules we make
