--- a/index.html
+++ b/index.html
@@ -4,8 +4,9 @@
 <head>
   <!-- Link jQuery -->
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.0/jquery.min.js"></script>
-  <script type="text/javascript" src="hlpscrpt.js"></script>
+  <!-- <script type="text/javascript" src="hlpscrpt.js"></script> -->
   <link rel="stylesheet" type="text/css" href="looks.css">
+
   <!-- Sync Aktiv Grotesk from Typekit -->
   <script src="https://use.typekit.net/nvx6nso.js"></script>
   <script>try{Typekit.load({ async: true });}catch(e){}</script>
@@ -15,6 +16,8 @@
 
 <body>
   <!--<script> $( $.parseHTML( "<span class=okwhen> It's ok to help when </span>" ) ).prependTo( ".answer" ); </script> -->
+  <script> $( $.parseHTML( "<span> It's ok to help when </span>" ) ).prependTo( ".answer" ); </script>
+
   <h1>We depend on each other to overcome our personal
   constraints. But there are unwritten rules on asking
   for help. This is a collection of the rules we make
@@ -24,7 +27,7 @@
   <p> <span class="answer">helping doesn't hurt</span> </p>
   <p> <span class="answer">ever</span> </p>
   <p> <span class="answer">you don't lose yourself in helping. (emotionally or mentally)</span> </p>
-  <p> <span class="answer">ever</span> </p>
+  <p class="answer"> <span>ever</span> </p>
   <p> <span class="answer">ever</span> </p>
   <p> <span class="answer">ever</span> </p>
   <p> <span class="answer">ever</span> </p>
