testing something that should work

--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
 <body>
   <!--<script> $( $.parseHTML( "<span class=okwhen> It's ok to help when </span>" ) ).prependTo( ".answer" ); </script> -->
   <script> $( $.parseHTML( "<span> It's ok to help when </span>" ) ).prependTo( ".answer" ); </script>
+  <script> $( "p" ).prepend( "<b>Hello </b>" ); </script>
 
   <h1>We depend on each other to overcome our personal
   constraints. But there are unwritten rules on asking
