--- a/index.html
+++ b/index.html
@@ -2,16 +2,14 @@
 <html>
 
 <head>
-  <!-- Link jQuery -->
-  <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.0/jquery.min.js"></script>
-  <!-- <script type="text/javascript" src="hlpscrpt.js"></script> -->
+  <!-- Link CSS -->
   <link rel="stylesheet" type="text/css" href="looks.css">
 
   <!-- Sync Aktiv Grotesk from Typekit -->
   <script src="https://use.typekit.net/nvx6nso.js"></script>
   <script>try{Typekit.load({ async: true });}catch(e){}</script>
-  <!--<script> $("<span class="okwhen"> It's ok to help when </span>").prependTo( ".answer" ); </script>
-  <script>$( ".answer" ).prepend( $.parseHTML( "<span> It's ok to help when </span>" ));</script>-->
+
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.0/jquery.min.js"></script>
 </head>
 
 <body>
@@ -24,29 +22,29 @@
   for help. This is a collection of the rules we make
   for when we think it’s ok to help other people.
   <br>Start typing to submit yours.</h1>
-    <div class="answerssection">
-  <p> <span class="answer">helping doesn't hurt</span> </p>
-  <p> <span class="answer">ever</span> </p>
-  <p> <span class="answer">you don't lose yourself in helping. (emotionally or mentally)</span> </p>
-  <p class="answer"> <span>ever</span> </p>
-  <p> <span class="answer">ever</span> </p>
-  <p> <span class="answer">ever</span> </p>
-  <p> <span class="answer">ever</span> </p>
-  <p> <span class="answer">ever</span> </p>
-  <p> <span class="answer">ever</span> </p>
-  <p> <span class="answer">ever</span> </p>
-  <p> <span class="answer">ever</span> </p>
-  <p> <span class="answer">ever</span> </p>
-  <p> <span class="answer">ever</span> </p>
-  <p> <span class="answer">ever</span> </p>
-  <p> <span class="answer">ever</span> </p>
-  <p> <span class="answer">ever</span> </p>
-  <p> <span class="answer">ever</span> </p>
-  <p> <span class="answer">ever</span> </p>
-  <p> <span class="answer">ever</span> </p>
-  <p> <span class="answer">ever</span> </p>
-  <p> <span class="answer">ever</span> </p>
-  <p> <span class="answer">ever</span> </p>
+  <div class="answerssection">
+    <p> <span class="answer">helping doesn't hurt</span> </p>
+    <p> <span class="answer">ever</span> </p>
+    <p> <span class="answer">you don't lose yourself in helping. (emotionally or mentally)</span> </p>
+    <p class="answer"> <span>ever</span> </p>
+    <p> <span class="answer">ever</span> </p>
+    <p> <span class="answer">ever</span> </p>
+    <p> <span class="answer">ever</span> </p>
+    <p> <span class="answer">ever</span> </p>
+    <p> <span class="answer">ever</span> </p>
+    <p> <span class="answer">ever</span> </p>
+    <p> <span class="answer">ever</span> </p>
+    <p> <span class="answer">ever</span> </p>
+    <p> <span class="answer">ever</span> </p>
+    <p> <span class="answer">ever</span> </p>
+    <p> <span class="answer">ever</span> </p>
+    <p> <span class="answer">ever</span> </p>
+    <p> <span class="answer">ever</span> </p>
+    <p> <span class="answer">ever</span> </p>
+    <p> <span class="answer">ever</span> </p>
+    <p> <span class="answer">ever</span> </p>
+    <p> <span class="answer">ever</span> </p>
+    <p> <span class="answer">ever</span> </p>
 </div>
   <p class="side"> CONNECT </p>
 </body>
