--- a/index.html
+++ b/index.html
@@ -23,10 +23,10 @@
   for when we think it’s ok to help other people.
   <br>Start typing to submit yours.</h1>
   <div class="answerssection">
-    <p> <span class="answer">helping doesn't hurt</span> </p>
+    <p class="ok"> <span class="answer">helping doesn't hurt</span> </p>
     <p> <span class="answer">ever</span> </p>
     <p> <span class="answer">you don't lose yourself in helping. (emotionally or mentally)</span> </p>
-    <p class="answer"> <span>ever</span> </p>
+    <p class="ok"> <span>ever</span> </p>
     <p> <span class="answer">ever</span> </p>
     <p> <span class="answer">ever</span> </p>
     <p> <span class="answer">ever</span> </p>
