filled out more info

--- a/index.html
+++ b/index.html
@@ -13,9 +13,6 @@
 </head>
 
 <body>
-  <!--<script> $( $.parseHTML( "<span class=okwhen> It's ok to help when </span>" ) ).prependTo( ".answer" ); </script> -->
-  <script> $( $.parseHTML( "<span> It's ok to help when </span>" ) ).prependTo( ".answer" ); </script>
-  <script> $( "p" ).prepend( "<b>Hello </b>" ); </script>
 
   <h1>We depend on each other to overcome our personal
   constraints. But there are unwritten rules on asking
@@ -23,28 +20,54 @@
   for when we think it’s ok to help other people.
   <br>Start typing to submit yours.</h1>
   <div class="answerssection">
-    <p class="ok"> <span class="answer">helping doesn't hurt</span> </p>
-    <p> <span class="answer">ever</span> </p>
-    <p> <span class="answer">you don't lose yourself in helping. (emotionally or mentally)</span> </p>
+    <p class="ok"> <span>helping doesn't hurt</span> </p>
     <p class="ok"> <span>ever</span> </p>
-    <p> <span class="answer">ever</span> </p>
-    <p> <span class="answer">ever</span> </p>
-    <p> <span class="answer">ever</span> </p>
-    <p> <span class="answer">ever</span> </p>
-    <p> <span class="answer">ever</span> </p>
-    <p> <span class="answer">ever</span> </p>
-    <p> <span class="answer">ever</span> </p>
-    <p> <span class="answer">ever</span> </p>
-    <p> <span class="answer">ever</span> </p>
-    <p> <span class="answer">ever</span> </p>
-    <p> <span class="answer">ever</span> </p>
-    <p> <span class="answer">ever</span> </p>
-    <p> <span class="answer">ever</span> </p>
-    <p> <span class="answer">ever</span> </p>
-    <p> <span class="answer">ever</span> </p>
-    <p> <span class="answer">ever</span> </p>
-    <p> <span class="answer">ever</span> </p>
-    <p> <span class="answer">ever</span> </p>
+    <p class="ok"> <span>you don't lose yourself in helping. (emotionally or mentally)</span> </p>
+    <p class="ok"> <span>anyone needs you</span> </p>
+    <p class="ok"> <span>it fits your morals/values</span> </p>
+    <p class="ok"> <span>when a friend is in need.</span> </p>
+    <p class="ok"> <span>it makes sense to you.</span> </p>
+    <p class="ok"> <span>WHEN SOMEONE NEEDS IT!</span> </p>
+    <p class="ok"> <span>what am help</span> </p>
+    <p class="ok"> <span>when you can't spell help</span> </p>
+    <p class="ok"> <span>when helr is needed</span> </p>
+    <p class="ok"> <span>ever</span> </p>
+    <p class="ok"> <span>it's a blood + you a blood too</span> </p>
+    <p class="ok"> <span>you feel called to.</span> </p>
+    <p class="ok"> <span>When it makes sense otherwise its ok not to</span> </p>
+    <p class="ok"> <span>preach!!! @ the lady below me</span> </p>
+    <p class="ok"> <span>Always! We need to break down our socities stigam with asking/looking for help. We all need help, some more than others. If we foster this idea then people will really start to help.</span> </p>
+    <p class="ok"> <span>you need it</span> </p>
+    <p class="ok"> <span>whenever's clear</span> </p>
+    <p class="ok"> <span>its ok to help</span> </p>
+    <p class="ok"> <span>someone asks</span> </p>
+    <p class="ok"> <span>asked</span> </p>
+    <p class="ok"> <span>it matters</span> </p>
+    <p class="ok"> <span>they collapse and i have to</span> </p>
+    <p class="ok"> <span>when the need is genuine</span> </p>
+    <p class="ok"> <span>both parties grow because of it</span> </p>
+    <p class="ok"> <span>always</span> </p>
+    <p class="ok"> <span>siri can't</span> </p>
+    <p class="ok"> <span>beer is bestowed</span> </p>
+    <p class="ok"> <span>you're out of tp</span> </p>
+    <p class="ok"> <span>never a bad thing!</span> </p>
+    <p class="ok"> <span>the wrods dno't mkae snese</span> </p>
+    <p class="ok"> <span>you need it</span> </p>
+    <p class="ok"> <span>the result is mutually benefitial</span> </p>
+    <p class="ok"> <span>you have no option</span> </p>
+    <p class="ok"> <span>ever it's convienent for me #blessed</span> </p>
+    <p class="ok"> <span>Always</span> </p>
+    <p class="ok"> <span>you're open to it</span> </p>
+    <p class="ok"> <span>YOU WANT TO</span> </p>
+    <p class="ok"> <span>you care</span> </p>
+    <p class="ok"> <span>they need it</span> </p>
+    <p class="ok"> <span>no other resources</span> </p>
+    <p class="ok"> <span>you don't regret it</span> </p>
+    <p class="ok"> <span>you love them</span> </p>
+    <p class="ok"> <span>somebody asks</span> </p>
+    <p class="ok"> <span>somebody is dying</span> </p>
+    <p class="ok"> <span>ever</span> </p>
+
 </div>
   <p class="side"> CONNECT </p>
 </body>
