About page + more

--- a/index.html
+++ b/index.html
@@ -69,6 +69,7 @@
     <p class="ok"> <span>ever</span> </p>
 
 </div>
-  <p class="side"> CONNECT </p>
+  <div class="side"> <a href="https://twitter.com/oktohelp">CONNECT</a> <a href="/about">ABOUT</a> </div>
+
 </body>
 </html>
