--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
     <p class="ok"> <span>ever</span> </p>
 
 </div>
-  <div class="side"> <a href="https://twitter.com/oktohelp">CONNECT</a> <a href="/about">ABOUT</a> </div>
+  <span class="side"> <a href="https://twitter.com/oktohelp">CONNECT</a> <a href="/about">ABOUT</a> </span>
 
 </body>
 </html>
