--- a/about.html
+++ b/about.html
@@ -14,7 +14,7 @@
 
 <body>
 
-  <h1 class="centered"> Help is Cool started off as a senior thesis project by <a href="dzomba.co">Amar Dzomba</a>
+  <h1 class="about"> Help is Cool started off as a senior thesis project by <a href="www.dzomba.co">Amar Dzomba</a>
     and was originally exhibited during Art.Downtown 2016, in Grand Rapids, Michigan. The project walked people
     through the realization that asking for help is not simple — as we all have different priority structures.
     Then, it prompted people to create a rule based on their personal understanding of when it's ok to help.
