--- a/index.html
+++ b/index.html
@@ -67,9 +67,11 @@
     <p class="ok"> <span>somebody asks</span> </p>
     <p class="ok"> <span>somebody is dying</span> </p>
     <p class="ok"> <span>ever</span> </p>
+  </div>
 
-</div>
-  <span class="side"> <a href="https://twitter.com/oktohelp">CONNECT</a> <a href="/about">ABOUT</a> </span>
+  <div class="side">
+    <a href="https://twitter.com/oktohelp">CONNECT</a> <a href="/about">ABOUT</a>
+  </div>
 
 </body>
 </html>
