test if this is working

--- a/about.html
+++ b/about.html
@@ -18,6 +18,8 @@
     and was originally exhibited during Art.Downtown 2016, in Grand Rapids, Michigan. The project walked people
     through the realization that asking for help is not simple — as we all have different priority structures.
     Then, it prompted people to create a rule based on their personal understanding of when it's ok to help.
+<br>
+    test test
 
     <script src="//code.jquery.com/jquery-2.1.1.min.js"></script>
 <div align-content="centered" width="30vw">
